@@ -1,6 +1,7 @@
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
 DIST mail-0.3.3.tar.bz2 13157 RMD160 340995c5d9cf447cd29331f4fc1529aaa131f737 SHA1 59f4cdcd6f32fabe2d514792ec82bae0a7c9724d SHA256 ab8f5c38dd7a4936e782c98bfe3f1335d1772669ee5fecbc3fecf72b09c90001
 DIST mail-current.tar.bz2 11104 RMD160 f65d14719c17f1fb7d877d0070aa89ece12d8732 SHA1 fea389c00baab727cd1907e9653ec5423f21204b SHA256 a931865359feee396923e87df98c1f2c6b19b52c0ff8c4ae54a8c70ea21d9e70
-EBUILD kadu-mail-0.3.3.ebuild 286 RMD160 6825e568ab80c9b044d7fd202a8ef4ba9f720ba7 SHA1 f114218ba6dd8af728a6cb01acabd7d8475133f2 SHA256 b1ccc0cf51a02f2740bbbe0870d5eb490fc801f57ed84a8526f1f2fb5fa53681
-EBUILD kadu-mail-0.3.5.ebuild 299 RMD160 54c2977a904f2343fa3dcd89c513d3e4ce254dfd SHA1 3cf0536c43dd8614bd47f94942ae7b195aeba298 SHA256 f279262e02d15e42c0c30ae81d74551f94cc0419be5ce058b66a16471ecaae48
-MISC ChangeLog 218 RMD160 02ac366f9b4f0817331bc0d8bf2dc6f99de9da60 SHA1 5bb777508c95aac3ce7d34d2b415bccf95cd6129 SHA256 f59bc4db5efa455b98d8695e8c60b24dbf3c5535f5eee0a811d3eeaec4decc08
+EBUILD kadu-mail-0.3.3.ebuild 416 RMD160 b3f8e5e3239b38468380a8545979e0aabe7a97b9 SHA1 fcc8d69bfbd2f3b77215d43b3fe2d78c9594a57e SHA256 67f1625b24817c9f0e43764f300dc2426ae7b8ef02fe8728419e4fb65f9a9be8
+EBUILD kadu-mail-0.3.5.ebuild 394 RMD160 93d6c4c65b40c61acce8e7b7c38ff967eee6afce SHA1 c75deb7cc35402e4493e511a69d597a3d6b7e1ac SHA256 e9a83849deaaac88209d6d78711a3797bcfb9beaa286f69b2d199e34cc4f1f0e
+MISC ChangeLog 355 RMD160 91c1c04cd60e97b5aa482404adcdab3aa36892fb SHA1 ac6a216ec1a157e79f4ccfef166faafab3303b77 SHA256 eef1159ee58c6347747b685a2abca76b8ee028bd2c4320d579e7daff85511528
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
