@@ -1,10 +1,10 @@
-#
-# PACKAGE INFORMATION
-#
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
 
 inherit kadu-base
 
-MOD_DEPEND="~net-im/kadu-notify-${MIN_VER}"
+MOD_DEPEND=">=net-im/kadu-notify-${MIN_VER}"
 MOD_URI="http://kadu.net/~michal/${NAME}/${NAME}-current.tar.bz2"
 MOD_TYPE="ext"
 
