@@ -1,6 +1,10 @@
 # ChangeLog for net-im/kadu-mail
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> kadu-mail-0.3.3.ebuild,
+  kadu-mail-0.3.5.ebuild, +metadata.xml:
+  Some repoman fixes.
 
   08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl> Manifest:
   Removed remnants of rc2 from Manifest.
